[project]
name = "arroyo-gateway"
version = "0.2.0"
description = "Arroyo TEC Gateway — Phase 2 Bounded Writes (bench-test prototype)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
]

[project.scripts]
arroyo-gateway = "arroyo_gateway.main:run"

[tool.setuptools.packages.find]
include = ["arroyo_gateway*"]
